[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "daphne-lib"
authors = [
    {name = "The DAPHNE Consortium", email = "daphne_dev@know-center.at"},
]
description = "DaphneLib: Python API for DAPHNE"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache v2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
]
keywords = [
    "DAPHNE",
    "Integrated Data Analysis Pipelines",
]
dependencies = [
    "pandas",
]
version = "0.3.0-alpha.1"

[project.urls]
Homepage = "https://daphne-eu.eu/"
Documentation = "https://daphne-eu.github.io/daphne/DaphneLib/Overview/"
Repository = "https://github.com/daphne-eu/daphne"
Issues = "https://github.com/daphne-eu/daphne/issues"
Changelog = "https://github.com/daphne-eu/daphne/releases"

[tool.setuptools]
license-files = ["LICENSE.txt"]
